# DrawingTriangles

./: .gitignore  CMakeLists.txt
shader/: SimpleFragmentShader.frag  SimpleVertexShader.vert
src/: controls.cpp  main.cpp
src/utility/: shader.hpp
